Added CallbackUri for book kinly room request
