# VideoAPI/VideoApi.Common/Configuration/ServicesConfiguration.cs
@@ -3,5 +3,6 @@ namespace VideoApi.Common.Configuration
     public class ServicesConfiguration
     {
         public string KinlyApiUrl { get; set; }
+        public string CallbackUri { get; set; }
     }
 }
